Revision history for HTML::FormWidgets

         - Bumped HTML::Accessor version dependency

0.11.347 2012-03-09
         - Fixed Menu padding when there is no content
         - Fixed Rule for Opera by adding "most" class to rest of line
         - Added form wrapper

0.10.346 2012-03-04
         - Fixed failing unordered list test. Added ordered list test

0.10.345 2012-03-03
         - Added classes hash to PopupMenu
         - Image class has subtype icon which is a span for background CSS
         - Renamed UnorderedList to List and added odered option
         - Updated Moose / Class::MOP / MRO::Compat dependencies
         - Removed CSS border art for rounded corners from Menu

0.9.336  2011-12-30
         - Added Async widget. Adds a div whose content is loaded via Ajax

0.8.334  2011-12-12
         - Fixed input field names in Table
         - Updated pod and added more tests
         - Added globals attr to separate class wide defaults from obj defaults
         - Set separator to break to have prompt appear above input field
         - Popupmenu sorts values into label order if labels are provided
         - Fields attr contains localized text strings
         - Updated inc::Bob
         - Textarea simplified
         - If render_field return null then so does render
         - Tweaked row and col ids in Table
         - Added Unordered list subclass

0.7.312  2011-06-26
         - Stepno can be a hash ref which will get inflated

0.6.311  2011-05-22
         - Made the build class method ignore bad input data structure
         - Suppressed dcollins CPAN testing
         - Switched to using Try::Tiny
         - Added step number iterator
         - Changed default class names for Anchor and Button
         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Suppressed Konig CPAN testing again
         - Added ScrollPin
         - Added SidebarPanel
         - Added TabSwapper
         - Added clear field to date